# parcl-liquidator-bot

./: .env  .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
app/: set.ts
app/keypairs/: parcl_program.json
app/types/: marginAccount.ts
keypairs/: delegate.json
programs/parcl/: Cargo.toml
programs/parcl/src/: errors.rs  lib.rs
programs/parcl/src/instructions/: evaluator.rs  liquidate.rs  mod.rs  simulator.rs
programs/parcl/src/state/: margin_account.rs  market.rs  mod.rs
scripts/: hourly_airdrop.sh
tests/: liquidator.ts  test_1.ts
