[package]
name = "parcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "parcl"
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.28.0"
hex = "0.4"
arrayref = "0.3.6" 
solana-security-txt = "1.1.1"
anchor-spl = "0.28.0"